[gd_scene load_steps=11 format=3 uid="uid://bdjuloaag0nxb"]

[ext_resource type="Script" uid="uid://c4dgnrh28cjn8" path="res://entities/enemy/goon.gd" id="1_m8kop"]
[ext_resource type="Texture2D" uid="uid://cj4c3ykn2ton4" path="res://assets/goon.png" id="2_rwklv"]
[ext_resource type="PackedScene" uid="uid://lm36snfl5obu" path="res://components/hitbox_component.tscn" id="3_pniho"]
[ext_resource type="PackedScene" uid="uid://ddemxbua6ylaj" path="res://components/audio_manager_component.tscn" id="3_rwklv"]
[ext_resource type="PackedScene" uid="uid://bmn8km3ip46h6" path="res://components/health_component.tscn" id="4_55s37"]
[ext_resource type="PackedScene" uid="uid://ccvm8eicw8t4d" path="res://components/common_physics_component.tscn" id="6_m8kop"]
[ext_resource type="PackedScene" uid="uid://bkmxotoqgn5rn" path="res://components/state_machine_component.tscn" id="6_ma1v5"]
[ext_resource type="PackedScene" uid="uid://cdbvouq7r8gic" path="res://components/ai_component.tscn" id="6_pniho"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ailji"]
height = 2.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mppgj"]
height = 3.0
radius = 1.5

[node name="Goon" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
floor_constant_speed = true
floor_snap_length = 0.0
script = ExtResource("1_m8kop")
speed = 0.5
friction = 0.95
footstep_frequency = 300
infight_group = 1
blockable_type = 1
metadata/_custom_type_script = "uid://88pbfyfqnxlk"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0)
shape = SubResource("CylinderShape3D_ailji")

[node name="Sprite3D" type="Sprite3D" parent="."]
centered = false
offset = Vector2(-8, 0)
pixel_size = 0.125
billboard = 2
texture_filter = 0
texture = ExtResource("2_rwklv")
hframes = 8

[node name="AIComponent" parent="." instance=ExtResource("6_pniho")]
melee_activation_range = 4.0

[node name="CommonPhysicsComponent" parent="." instance=ExtResource("6_m8kop")]

[node name="AudioManagerComponent" parent="." instance=ExtResource("3_rwklv")]

[node name="StateMachineComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("6_ma1v5")]
sprite = NodePath("../Sprite3D")

[node name="HealthComponent" parent="." instance=ExtResource("4_55s37")]
max_health = 2.0

[node name="HitboxComponent" parent="." instance=ExtResource("3_pniho")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CylinderShape3D_mppgj")
